<menu xmlns:android="http://schemas.android.com/apk/res/android">
        
    <item android:id="@+id/menu_backwards"
        android:title="@string/menu_backwards"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_find_previous_holo_dark" />
    
    <item android:id="@+id/menu_forewards"
        android:title="@string/menu_forewards"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:icon="@drawable/ic_find_next_holo_dark" />
    
    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_refresh" />
    
    <item android:id="@+id/menu_goto"
        android:title="@string/menu_goto"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_search" />
    
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences" />
    
</menu>
